feat: Centralize logo path configuration, refactor header table generation, and improve elective adventure parsing logic.

--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,6 @@
 {
     "PACK_NUM": "1234",
     "CSV_FILE": "C:\\fake\\path\\to\\reportbuilder.csv",
-    "OUTPUT_FOLDER": "C:\\fake\\path\\to\\output"
+    "OUTPUT_FOLDER": "C:\\fake\\path\\to\\output",
+    "PACK_LOGO": "logos\\logo.png"
 }
